[tool.poetry]
name = "repl_nix_meu-projeto"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.3"
orjson = "^3.8.2"
PyNaCl = "^1.5.0"
requests = "^2.28.1"
typing-extensions = "^4.4.0"
yarl = "^1.8.1"
tweepy = "^4.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
